...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" name="YPWhite"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DCC-p3-uGl">
                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="bSR-QM-yDF"/>
                                                        <constraint firstAttribute="height" constant="44" id="xUO-BW-wFC"/>
                                                    </constraints>
                                                    <buttonConfiguration key="configuration" style="plain" image="emptyLike"/>
                                                    <connections>
...
                                <connections>
                                    <outlet property="delegate" destination="iOT-Hr-2Cs" id="dpY-13-t8p"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gLo-Z0-fps" userLabel="Back Button">
                                <rect key="frame" x="4" y="55" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="navBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="pkk-Yr-UTM"/>
                                    <constraint firstAttribute="width" constant="48" id="qkl-MP-BST"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button_white"/>
...
            <objects>
                <viewController storyboardIdentifier="AuthViewController" id="k2E-OB-OTz" userLabel="Auth View Controller" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Dpa-6b-1ib">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AuthLogo" translatesAutoresizingMaskIntoConstraints="NO" id="uje-JG-DUA">
                                <rect key="frame" x="177" y="418" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="EtS-RK-HYX"/>
                                    <constraint firstAttribute="width" constant="60" id="izs-Fh-8n6"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rf7-qG-Pxe">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="YPWhite"/>
                                <accessibility key="accessibilityConfiguration" label="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="2fk-RX-Md1"/>
                                </constraints>
                                <color key="tintColor" name="YPBlack"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
            </objects>
            <point key="canvasLocation" x="80" y="-1402"/>
        </scene>
        <!--WebView View Controller-->
        <scene sceneID="uba-j3-7mX">
            <objects>
                <viewController restorationIdentifier="UnsplashWebView" storyboardIdentifier="WebViewViewController" id="m2L-YU-F2Y" userLabel="WebView View Controller" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="wcP-jx-bJS">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" restorationIdentifier="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="uid-4H-TQr" userLabel="UnsplashWebView">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
