...
    
    private func createProfileScreenWithViews() {
        
        view.backgroundColor = UIColor(named: "YPBlack")
        
        logoutButton = UIButton.systemButton(with: UIImage(named: "logout_button")!, target: self, action: #selector(didTapLogoutButton))
        logoutButton.accessibilityIdentifier = "LogoutRedButton"
        
        avatarImageView.layer.masksToBounds = true
        avatarImageView.layer.cornerRadius = 35
        
        if let profile = profileService.profile {
            updateProfileDetails(profile: profile)
...
